--- a/css/mobile.css
+++ b/css/mobile.css
@@ -8,5 +8,8 @@
     .box{
         flex-direction: column;
         gap: 1rem;
-    }    
+    }
+    .btn-container{
+        flex-direction: column;
+    }
 }
